cambios en el nombre del archivo index

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
-    <title>TP2 - POO</title>
+    <link rel="stylesheet" href="../css/styles-2.css">
+    <title>TP2 - POO - Grupo 2</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar">
             <div>
-                <h1>TP2 - POO</h1>
+                <h1>TP2 - POO - Grupo 2</h1>
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="/">Inicio</a></li>
-                    <li><a href="/students">Clientes</a></li>
-                    <li><a href="/courses">Reservas</a></li>
-                    <li><a href="/about">Contacto</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./reservas.html">Reservas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
 
@@ -32,7 +31,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Contenido de la página</h2>
+            <h1>Contenido de la página</h1>
             <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
             <p>En este sitio web, podrás gestionar clientes y reservas de manera eficiente.</p>
             <p>Utiliza la barra de navegación para explorar las diferentes secciones del sitio.</p>
@@ -54,7 +53,7 @@
                 <p>Pablo Demartini</p>
             </section>
         </div>
-        <p>&copy; 2025 TP2 - POO. Todos los derechos reservados.</p>
+        <p>&copy; 2025 TP2 - POO - Grupo 2. Todos los derechos reservados.</p>
     </footer>
 </body>
 
