--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -21,7 +21,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="./index-grid-template.html">Inicio</a></li>
+                    <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./reservas.html">Reservas</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
