--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -4,6 +4,8 @@
     --light-color: #ffffff;
     --dark-color: #333;
     --text-color: #ffffff;
+    --text-color-2: #9b9b9b;
+    --text-color-3: #17a1f1;
     --background-color: #575757;
     --background-color-2: #d8d8d8;
     --line-height-1: 1.6;
@@ -73,17 +75,18 @@ body{
 .hero {
     text-align: center;
     padding: var(--padding-3);
-    background-color: var(--secondary-color);
-    color: var(--light-color);
+    color: var(--dark-color);
 }
 
 .hero h1, .hero h2 {
     margin-bottom: var(--margin-2);
+    color:var(--text-color-3); 
 }
 
 .hero p {
     margin-bottom: var(--margin-1);
     font-size: 1.25em;
+    color: var(--text-color-2);
 }
 
 footer {
