--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div>
-                <h1>TP2 - POO</h1>
+                <h1>POO - Grupo 2 - TP2</h1>
             </div>
             <div class="nav-links">
                 <ul>
