cambios en footer y navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,19 +33,20 @@
         <section class="hero">
             <h1>Contenido de la página</h1>
             <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
-            <p>En este sitio web, podrás gestionar clientes y reservas de manera eficiente.</p>
-            <p>Utiliza la barra de navegación para explorar las diferentes secciones del sitio.</p>
+            <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p>
         </section>
     </main>
     <footer>
         <div class="info-footer">
             <section>
                 <h3>Centro de estudio: IFTS - 16</h3>
+                <p>Programación Orientada a Objetos</p>
+                <p>Profesor: Manuel Buceta</p>
                 <p>Grupo 2</p>
-                <p>Trabajo Práctico Nro.: 2</p>
+                <p>Trabajo Práctico Nro: 2</p>
             </section>
             <section>
-                <h3>Integrantes:</h3>
+                <h3>Integrantes del grupo:</h3>
                 <p>Lucia Corral</p>
                 <p>Carla Guisande</p>
                 <p>Ignacio Hernandez</p>
@@ -53,7 +54,7 @@
                 <p>Pablo Demartini</p>
             </section>
         </div>
-        <p>&copy; 2025 TP2 - POO - Grupo 2. Todos los derechos reservados.</p>
+        <p>&copy; 2025 POO - Grupo 2 - TP2. Todos los derechos reservados.</p>
     </footer>
 </body>
 
