--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -34,18 +34,19 @@
             <h1>Contenido de la página Contacto</h1>
             <p>Bienvenidos a la sección de contacto del trabajo práctico Nro. 2 de POO.</p>
             <p>Aquí podrás encontrar la información necesaria para ponerte en contacto con nosotros.</p>
-            <p>No dudes en enviarnos tus consultas o comentarios a través del formulario de contacto o los medios proporcionados.</p>
         </section>
     </main>
     <footer>
         <div class="info-footer">
             <section>
                 <h3>Centro de estudio: IFTS - 16</h3>
+                <p>Programación Orientada a Objetos</p>
+                <p>Profesor: Manuel Buceta</p>
                 <p>Grupo 2</p>
-                <p>Trabajo Práctico Nro.: 2</p>
+                <p>Trabajo Práctico Nro: 2</p>
             </section>
             <section>
-                <h3>Integrantes:</h3>
+                <h3>Integrantes del grupo:</h3>
                 <p>Lucia Corral</p>
                 <p>Carla Guisande</p>
                 <p>Ignacio Hernandez</p>
@@ -53,7 +54,7 @@
                 <p>Pablo Demartini</p>
             </section>
         </div>
-        <p>&copy; 2025 TP2 - POO. Todos los derechos reservados.</p>
+        <p>&copy; 2025 POO - Grupo 2 - TP2. Todos los derechos reservados.</p>
     </footer>
 </body>
 
