--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -41,11 +41,13 @@
         <div class="info-footer">
             <section>
                 <h3>Centro de estudio: IFTS - 16</h3>
+                <p>Programación Orientada a Objetos</p>
+                <p>Profesor: Manuel Buceta</p>
                 <p>Grupo 2</p>
-                <p>Trabajo Práctico Nro.: 2</p>
+                <p>Trabajo Práctico Nro: 2</p>
             </section>
             <section>
-                <h3>Integrantes:</h3>
+                <h3>Integrantes del grupo:</h3>
                 <p>Lucia Corral</p>
                 <p>Carla Guisande</p>
                 <p>Ignacio Hernandez</p>
@@ -53,7 +55,7 @@
                 <p>Pablo Demartini</p>
             </section>
         </div>
-        <p>&copy; 2025 TP2 - POO. Todos los derechos reservados.</p>
+        <p>&copy; 2025 POO - Grupo 2 - TP2. Todos los derechos reservados.</p>
     </footer>
 </body>
 
