--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -54,8 +54,19 @@
                 <p>Ignacio Vidal</p>
                 <p>Pablo Demartini</p>
             </section>
+            <section>
+                <h3>Links</h3>
+                <div class="footer-links">
+                    <ul>
+                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./reservas.html">Reservas</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                    <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2" target="_blank" rel="noopener noreferrer">"Github"</a></li>
+                </ul>
+                </div>
+            </section>
         </div>
-        <p>&copy; 2025 POO - Grupo 2 - TP2. Todos los derechos reservados.</p>
+        <p>&copy; 2025 <span>POO - Grupo 2 - TP2.</span> Todos los derechos reservados.</p>
     </footer>
 </body>
 
