--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
         <div class="info-footer">
             <section>
                 <h3>Centro de estudio: IFTS - 16</h3>
+                <p><span>Desarrollo de software</span></p>
                 <p>Programación Orientada a Objetos</p>
                 <p>Profesor: Manuel Buceta</p>
                 <p>Grupo 2</p>
@@ -65,7 +66,7 @@
                 </div>
             </section>
         </div>
-        <p>&copy; 2025 <span>POO - Grupo 2 - TP2.</span> Todos los derechos reservados.</p>
+        <p>&copy; 2025 <span> - POO - Grupo 2 -</span> Todos los derechos reservados.</p>
     </footer>
 </body>
 
