cambios en navbar

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -26,7 +26,6 @@
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
-
         </nav>
     </header>
     <main>
@@ -58,11 +57,12 @@
                 <h3>Links</h3>
                 <div class="footer-links">
                     <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./reservas.html">Reservas</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-                    <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2" target="_blank" rel="noopener noreferrer">"Github"</a></li>
-                </ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./reservas.html">Reservas</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                        <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2"
+                                target="_blank" rel="noopener noreferrer">"Github"</a></li>
+                    </ul>
                 </div>
             </section>
         </div>
