--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -14,6 +14,8 @@
     --padding-1: 1rem;
     --padding-2: 1.5rem;
     --padding-3: 2rem;
+    --padding-4: 3rem;
+    --padding-5: 4rem;
     --margin-1: .5rem;
     --margin-2: 1rem;
     --margin-3: 1.5rem;
@@ -29,14 +31,15 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: "Roboto Condensed", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
     background-color: var(--light-color);
     color: var(--dark-color);
     min-height: 100vh;
-    font-size: 1em; /* 16px */
+    font-size: 1em;
+    /* 16px */
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: 1fr;
@@ -50,26 +53,31 @@ body{
     align-items: center;
     display: grid;
     grid-template-columns: auto auto;
-    padding: var(--padding-1) var(--padding-3);
+    padding: var(--padding-1) var(--padding-5);
     align-items: center;
 }
 
-.nav-links ul{
+.nav-links ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: var(--text-color);
     list-style: none;
-    gap: var(--gap-4);
-}
-.nav-links ul li a{
-    color: var(--text-color);
-    text-decoration: none;
-    font-size: 1.25em;
+    gap: var(--gap-3);
+    padding:  0 var(--padding-1);
+    width: 350px;
 }
 
-.nav-links ul li a:hover{
+.nav-links ul li a {
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 1.3em;
+}
+
+.nav-links ul li a:hover {
     color: var(--secondary-color);
+    opacity: 0.8;
 }
 
 .hero {
@@ -78,9 +86,10 @@ body{
     color: var(--dark-color);
 }
 
-.hero h1, .hero h2 {
+.hero h1,
+.hero h2 {
     margin-bottom: var(--margin-2);
-    color:var(--text-color-3); 
+    color: var(--text-color-3);
 }
 
 .hero p {
@@ -92,60 +101,60 @@ body{
 footer {
     background-color: var(--background-color);
     color: var(--light-color);
-    padding: var(--padding-1);
+    padding: var(--padding-1) var(--padding-5);
     display: grid;
     grid-template-columns: repeat(auto, minmax(200px, 2fr));
     gap: var(--gap-1);
     text-align: center;
 }
 
-.info-footer{
+.info-footer {
     margin: var(--margin-1);
     display: flex;
     flex-direction: row;
-    gap: var(--gap-3);
+    gap: var(--gap-2);
     justify-content: space-around;
     text-align: left;
 }
 
-.info-footer h3{
+.info-footer h3 {
     margin-bottom: var(--margin-1);
     font-size: 1.5em;
     color: var(--secondary-color);
 }
 
-.info-footer span{
+.info-footer span {
     font-size: 1.2em;
     font-weight: bold;
 }
 
-.info-footer p{
+.info-footer p {
     margin-bottom: var(--margin-1);
     font-size: 1.1em;
 }
 
-.footer-links ul li{
+.footer-links ul li {
     list-style: none;
 }
 
-.footer-links ul{
+.footer-links ul {
     display: flex;
     flex-direction: column;
     gap: var(--gap-1);
     padding-left: 0;
 }
 
-.footer-links ul li a{
+.footer-links ul li a {
     color: var(--light-color);
     text-decoration: none;
     font-size: 1.1em;
 }
 
-.footer-links ul li a:hover{
+.footer-links ul li a:hover {
     color: var(--secondary-color);
 }
 
-footer span{
+footer span {
     text-align: center;
     /* margin-top: var(--margin-1); */
     font-size: 0.9em;
