--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,28 @@
-:root {
-    --primary-color: #23368d;
-    --secondary-color: #17a1f1;
-    --light-color: #ffffff;
-    --dark-color: #333;
-    --text-color: #ffffff;
-    --background-color: #575757;
-    --line-height-1: 1.6;
-    --line-height-2: 1.8;
-    --line-height-3: 2.0;
-    --padding-1: 1rem;
-    --padding-2: 1.5rem;
-    --padding-3: 2rem;
-    --margin-1: 10px;
-    --margin-2: 15px;
-    --margin-3: 20px;
-    --gap-1: 1rem;
-    --gap-2: 2rem;
-    --gap-3: 3rem;
+/* Link hover effect */
+a {
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #54b3d6;
+  padding: 0 .25rem;
+  margin: 0 -.25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+a:hover {
+  color: #fff;
+  box-shadow: inset 200px 0 0 0 #54b3d6;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Presentational styles */
+a {
+  color: #54b3d6;
+  font-family: 'Poppins', sans-serif;
+  font-size: 27px;
+  font-weight: 700;
+  line-height: 1.5;
+  text-decoration: none;
 }
 
-body{
-    font-family: "Roboto Condensed", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    background-color: var(--light-color);
-    color: var(--dark-color);
-    line-height: var(--line-height-1);
-    padding: var(--padding-3);
-    line-height: var(--line-height-1);
-    min-height: 100vh;
-    font-size: 1em;
-}
-
-main{
-    margin-top: var(--margin-3);
-    margin-bottom: var(--margin-3)
-}
-
-.navbar {
-    background-color: var(--primary-color);
-    color: var(--text-color);
-    text-align: center;
-    display: flex;
-    padding: var(--padding-1) var(--padding-3);
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-links ul{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: var(--text-color);
-    list-style: none;
-    gap: var(--gap-3);
-    margin: 0 var(--margin-1);
-    font-size: 1.25em;
-}
-
-.nav-links ul li a{
-    color: var(--text-color);
-    text-decoration: none;
-    transition: color 0.3s ease;
-    font-weight: bold;
-}
-
-.nav-links ul li a:hover{
-    color: var(--secondary-color);
-}
-
-footer{
-    background-color: var(--background-color);
-    color: var(--text-color);
-    text-align: center;
-    padding: var(--padding-1) var(--padding-3);
-    bottom: 0;
-    width: auto;
-    margin-top: var(--margin-3);
-}
-
-.info-footer{
-    margin: var(--margin-1);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.info-footer section{
-    max-width: 300px;
-    text-align: left;
-}
-
-.info-footer h3{
-    margin-bottom: var(--margin-2);
-    font-size: 1.5em;
-    color: var(--secondary-color);
+body {
+  display: grid;
+  height: 100vh;
+  place-items: center;
 }
