--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -26,7 +26,6 @@
                     <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
-
         </nav>
     </header>
     <main>
@@ -59,16 +58,16 @@
                 <h3>Links</h3>
                 <div class="footer-links">
                     <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./reservas.html">Reservas</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-                    <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2" target="_blank" rel="noopener noreferrer">"Github"</a></li>
-                </ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./reservas.html">Reservas</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                        <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2"
+                                target="_blank" rel="noopener noreferrer">"Github"</a></li>
+                    </ul>
                 </div>
             </section>
         </div>
         <p>&copy; 2025 <span> - POO - Grupo 2 -</span> Todos los derechos reservados.</p>
     </footer>
 </body>
-
 </html>
