--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles-2.css">
-    <title>TP2 - POO - Grupo 2</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>POO - Grupo 2</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar">
             <div>
-                <h1>POO - Grupo 2 - TP2</h1>
+                <a href="./index.html" class="logo"><h1>POO - Grupo 2 - TP2</h1></a>
             </div>
             <div class="nav-links">
                 <ul>
@@ -31,8 +31,8 @@
     <main>
         <section class="hero">
             <h1>Contenido de la página</h1>
-            <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
-            <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p>
+            <!-- <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
+            <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p> -->
         </section>
     </main>
     <footer>
