--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,165 @@
-/* Link hover effect */
-a {
-  box-shadow: inset 0 0 0 0 #54b3d6;
-  color: #54b3d6;
-  padding: 0 .25rem;
-  margin: 0 -.25rem;
-  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-}
-a:hover {
-  color: #fff;
-  box-shadow: inset 200px 0 0 0 #54b3d6;
+:root {
+    --primary-color: #23368d;
+    --secondary-color: #17a1f1;
+    --light-color: #ffffff;
+    --dark-color: #333;
+    --text-color: #ffffff;
+    --text-color-2: #9b9b9b;
+    --text-color-3: #17a1f1;
+    --background-color: #575757;
+    --background-color-2: #d8d8d8;
+    --line-height-1: 1.6;
+    --line-height-2: 1.8;
+    --line-height-3: 2.0;
+    --padding-1: 1rem;
+    --padding-2: 1.5rem;
+    --padding-3: 2rem;
+    --padding-4: 3rem;
+    --padding-5: 4rem;
+    --margin-1: .5rem;
+    --margin-2: 1rem;
+    --margin-3: 1.5rem;
+    --gap-1: 1rem;
+    --gap-2: 2rem;
+    --gap-3: 3rem;
+    --gap-4: 4rem;
 }
 
-/* Presentational styles */
-a {
-  color: #54b3d6;
-  font-family: 'Poppins', sans-serif;
-  font-size: 27px;
-  font-weight: 700;
-  line-height: 1.5;
-  text-decoration: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  display: grid;
-  height: 100vh;
-  place-items: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    background-color: var(--light-color);
+    color: var(--dark-color);
+    min-height: 100vh;
+    font-size: 1em; /* 16px */
+    display: grid;
+    grid-template-rows: auto 3fr;
+    grid-template-columns: 1fr;
+    line-height: var(--line-height-1);
+}
+
+.navbar {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    justify-content: space-between;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    padding: var(--padding-1) var(--padding-5);
+}
+
+.logo h1 {
+    font-size: 2.2em;
+    color: var(--text-color);
+}
+
+.nav-links ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: var(--text-color);
+    list-style: none;
+    gap: var(--gap-3);
+    padding:  0 var(--padding-1);
+    width: 350px;
+}
+
+.nav-links ul li a {
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 1.3em;
+}
+
+.nav-links ul li a:hover {
+    color: var(--secondary-color);
+    opacity: 0.8;
+}
+
+.hero {
+    text-align: center;
+    padding: var(--padding-3);
+    color: var(--dark-color);
+}
+
+.hero h1,
+.hero h2 {
+    margin-bottom: var(--margin-2);
+    color: var(--text-color-3);
+}
+
+.hero p {
+    margin-bottom: var(--margin-1);
+    font-size: 1.25em;
+    color: var(--text-color-2);
+}
+
+footer {
+    background-color: var(--background-color);
+    color: var(--light-color);
+    padding: var(--padding-1) var(--padding-5);
+    display: grid;
+    grid-template-columns: repeat(auto, minmax(200px, 2fr));
+    gap: var(--gap-1);
+    text-align: center;
+}
+
+.info-footer {
+    margin: var(--margin-1);
+    display: flex;
+    flex-direction: row;
+    gap: var(--gap-2);
+    justify-content: space-around;
+    text-align: left;
+}
+
+.info-footer h3 {
+    margin-bottom: var(--margin-1);
+    font-size: 1.5em;
+    color: var(--secondary-color);
+}
+
+.info-footer span {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.info-footer p {
+    margin-bottom: var(--margin-1);
+    font-size: 1.1em;
+}
+
+.footer-links ul li {
+    list-style: none;
+}
+
+.footer-links ul {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-1);
+    padding-left: 0;
+}
+
+.footer-links ul li a {
+    color: var(--light-color);
+    text-decoration: none;
+    font-size: 1.1em;
+}
+
+.footer-links ul li a:hover {
+    color: var(--secondary-color);
+}
+
+footer span {
+    text-align: center;
+    /* margin-top: var(--margin-1); */
+    font-size: 0.9em;
+    color: var(--text-color-2);
 }
