--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div>
-                <a href="./index.html" class="logo"><h1>POO - Grupo 2 - TP2</h1></a>
+                <h1>POO - Grupo 2 - TP2</h1>
             </div>
             <div class="nav-links">
                 <ul>
