--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,16 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Contenido de la página</h1>
+            <h1>Contenido de la página login/h1>
+                <form action="/login" method="post">
+                    <label for="username">Usuario:</label>
+                    <input type="text" id="username" name="username" required>
+                    <br>
+                    <label for="password">Contraseña:</label>
+                    <input type="password" id="password" name="password" required>
+                    <br>
+                    <button type="submit">Iniciar Sesión</button>
+                </form>
             <!-- <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
             <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p> -->
         </section>
