--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
@@ -22,8 +23,9 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./reservas.html">Reservas</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
+                    <li><a href="./reservas.html"><i class="fas fa-solid fa-bookmark"></i> Reservas</a></li>
+                    <li><a href="./login.html"><i class="fas fa-regular fa-right-to-bracket"></i> Login</a></li>
+                    <li><a href="./contacto.html"><i class="fas fa-regular fa-envelope"></i> Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -59,10 +61,11 @@
                 <div class="footer-links">
                     <ul>
                         <li><a href="./index.html">Inicio</a></li>
-                        <li><a href="./reservas.html">Reservas</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
+                        <li><a href="./reservas.html"><i class="fas fa-solid fa-bookmark"></i> Reservas</a></li>
+                        <li><a href="./login.html"><i class="fas fa-regular fa-right-to-bracket"></i> Login</a></li>
+                        <li><a href="./contacto.html"><i class="fas fa-regular fa-envelope"></i> Contacto</a></li>
                         <li><a href="https://github.com/PabloHD2023/Programacion-Orientada-a-Objetos-TP2"
-                                target="_blank" rel="noopener noreferrer">"Github"</a></li>
+                                target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> "Repo Grupo 2"</a></li>
                     </ul>
                 </div>
             </section>
