arreglo de etiqueta h1 en linea 35 de login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Contenido de la página login/h1>
+            <h1>Contenido de la página login</h1>
                 <form action="/login" method="post">
                     <label for="username">Usuario:</label>
                     <input type="text" id="username" name="username" required>
