--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -22,7 +22,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="./index.html">Inicio</a></li>
+                    <li><a href="./index.html"><i class="fas fa-solid fa-house"></i> Inicio</a></li>
                     <li><a href="./reservas.html"><i class="fas fa-solid fa-bookmark"></i> Reservas</a></li>
                     <li><a href="./login.html"><i class="fas fa-regular fa-right-to-bracket"></i> Login</a></li>
                     <li><a href="./contacto.html"><i class="fas fa-regular fa-envelope"></i> Contacto</a></li>
@@ -59,7 +59,7 @@
                 <h3>Links</h3>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./index.html"><i class="fas fa-solid fa-house"></i> Inicio</a></li>
                         <li><a href="./reservas.html"><i class="fas fa-solid fa-bookmark"></i> Reservas</a></li>
                         <li><a href="./login.html"><i class="fas fa-regular fa-right-to-bracket"></i> Login</a></li>
                         <li><a href="./contacto.html"><i class="fas fa-regular fa-envelope"></i> Contacto</a></li>
