--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
     --line-height-1: 1.6;
     --line-height-2: 1.8;
     --line-height-3: 2.0;
-    --padding-1: 1rem;
-    --padding-2: 1.5rem;
+    --padding-1: .5rem;
+    --padding-2: 1rem;
     --padding-3: 2rem;
     --padding-4: 3rem;
     --padding-5: 4rem;
@@ -75,7 +75,7 @@ body {
     box-shadow: inset 0 0 0 0 #54b3d6;
     color: var(--text-color);
     text-decoration: none;
-    font-size: 1.3em;
+    font-size: 1.1em;
     width: auto;
 }
 
@@ -145,7 +145,6 @@ footer {
     display: flex;
     flex-direction: column;
     gap: var(--gap-1);
-    padding-left: 0;
 }
 
 .footer-links ul li a {
