cambios en los colores del proyecto

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,9 @@
     <main>
         <section class="hero">
             <h1>Contenido de la página</h1>
-            <!-- <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
-            <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p> -->
+            <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
+            <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p>
+            <p>La idea del proyecto se basa en la toma de una reserva de habitacion en un hotel "X"</p>
         </section>
     </main>
     <footer>
