--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
 :root {
-    --primary-color: #172847;
-    --secondary-color: #17a1f1;
+    --primary-color: #1b3242;
+    --secondary-color: #B4B8AB;
     --light-color: #ffffff;
-    --dark-color: #333;
-    --text-color: #ffffff;
-    --text-color-2: #9b9b9b;
-    --text-color-3: #7dcfff;
-    --background-color: #575757;
-    --background-color-2: #d8d8d8;
+    --dark-color: #1b3242;
+    --text-color: #f4f9e9;
+    --text-color-2: #3f3f3f;
+    --text-color-3: #B4b8ab;
+    --text-color-4: #ff6600;
+    --background-color: #455168;
+    --background-color-2: #B4B8AB;
     --line-height-1: 1.6;
     --line-height-2: 1.8;
     --line-height-3: 2.0;
@@ -36,7 +37,6 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     background-color: var(--light-color);
-    color: var(--dark-color);
     min-height: 100vh;
     font-size: 1em; /* 16px */
     display: grid;
@@ -57,8 +57,9 @@ body {
 
 .logo h1 {
     font-size: 2.2em;
-    color: var(--text-color);
+    color: var(--text-color-4);
     margin-left: var(--margin-3);
+    font-weight: 900;
 }
 
 .nav-links ul {
@@ -73,7 +74,6 @@ body {
 }
 
 .nav-links ul li a {
-    box-shadow: inset 0 0 0 0 #54b3d6;
     color: var(--text-color);
     text-decoration: none;
     font-size: 1.1em;
@@ -81,8 +81,7 @@ body {
 }
 
 .nav-links ul li a:hover {
-    color: var(--text-color-3);
-    opacity: 0.8;
+    color: var(--text-color-4);
 }
 
 .hero {
@@ -115,11 +114,16 @@ footer {
 
 .info-footer {
     margin: var(--margin-1);
-    display: flex;
-    flex-direction: row;
-    gap: var(--gap-2);
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: var(--gap-3);
     text-align: left;
+    justify-content: space-between;
+}
+
+.info-footer section {
+    margin: var(--margin-2); 
+    max-width: 400px;
 }
 
 .info-footer h3 {
@@ -130,12 +134,15 @@ footer {
 
 .info-footer span {
     font-size: 1.2em;
-    font-weight: bold;
+    font-weight: 600;
+    font-style: normal;
+    color: var(--text-color-4);
 }
 
 .info-footer p {
     margin-bottom: var(--margin-1);
     font-size: 1.1em;
+    font-weight: normal;
 }
 
 .footer-links ul li {
@@ -162,5 +169,5 @@ footer span {
     text-align: center;
     /* margin-top: var(--margin-1); */
     font-size: 0.9em;
-    color: var(--text-color-2);
+    color: var(--text-color-4);
 }
