--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>POO - Grupo 2</title>
 </head>
-
 <body>
     <header>
         <nav class="navbar">
-            <div>
+            <div class="logo">
                 <h1>POO - Grupo 2 - TP2</h1>
             </div>
             <div class="nav-links">
