--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div>
+            <div class="logo">
                 <h1>POO - Grupo 2 - TP2</h1>
             </div>
             <div class="nav-links">
