--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@
     --text-color-3: #7dcfff;
     --background-color: #575757;
     --background-color-2: #d8d8d8;
-    --line-height-1: 1.6;
+    --line-height-1: 1.2;
     --line-height-2: 1.8;
-    --line-height-3: 2.0;
+    --line-height-3: 2.4;
     --padding-1: .5rem;
     --padding-2: 1rem;
     --padding-3: 2rem;
@@ -136,15 +136,18 @@ footer {
 .info-footer p {
     margin-bottom: var(--margin-1);
     font-size: 1.1em;
+    line-height: var(--line-height-1);
+    font-weight: 300;
 }
 
 .footer-links ul li {
+    display: grid;
     list-style: none;
 }
 
 .footer-links ul {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto;
     gap: var(--gap-1);
 }
 
@@ -152,6 +155,7 @@ footer {
     color: var(--light-color);
     text-decoration: none;
     font-size: 1.1em;
+    font-weight: 300;
 }
 
 .footer-links ul li a:hover {
