--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">
+            <div>
                 <h1>POO - Grupo 2 - TP2</h1>
             </div>
             <div class="nav-links">
