--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,21 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Contenido de la página</h1>
+            <h1>Bienvenido al Hotel IFTS-16</h1>
             <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
             <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p>
             <p>La idea del proyecto se basa en la toma de una reserva de habitacion en un hotel "X"</p>
+        </section>
+        <section class="fotos">
+            <div>
+                <img class="picture" src="../img/Como-decorar-una-habitacion-de-un-hotel.jpg" alt="foto-cuarto-1">
+            </div>
+            <div>
+                <img class="picture" src="../img/gMTRa4gTj2qTSjgroLJ5_large.jpg" alt="foto-cuarto-2">
+            </div>
+            <div>
+                <img class="picture" src="../img/ZoxQwbEojeoEVDngwfx1_large.jpg" alt="foto-cuarto-3">
+            </div>
         </section>
     </main>
     <footer>
