--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>POO - Grupo 2</title>
@@ -36,17 +35,17 @@
             <p>Bienvenidos al trabajo práctico Nro. 2 de POO.</p>
             <p>En este sitio web, podrás gestionar clientes y reservas de un hotel.</p>
             <p>La idea del proyecto se basa en la toma de una reserva de habitacion en un hotel "X"</p>
-        </section>
-        <section class="fotos">
-            <div>
-                <img class="picture" src="../img/Como-decorar-una-habitacion-de-un-hotel.jpg" alt="foto-cuarto-1">
-            </div>
-            <div>
-                <img class="picture" src="../img/gMTRa4gTj2qTSjgroLJ5_large.jpg" alt="foto-cuarto-2">
-            </div>
-            <div>
-                <img class="picture" src="../img/ZoxQwbEojeoEVDngwfx1_large.jpg" alt="foto-cuarto-3">
-            </div>
+            <section class="fotos">
+                <div>
+                    <img class="picture" src="../img/Como-decorar-una-habitacion-de-un-hotel.jpg" alt="foto-cuarto-1">
+                </div>
+                <div>
+                    <img class="picture" src="../img/gMTRa4gTj2qTSjgroLJ5_large.jpg" alt="foto-cuarto-2">
+                </div>
+                <div>
+                    <img class="picture" src="../img/ZoxQwbEojeoEVDngwfx1_large.jpg" alt="foto-cuarto-3">
+                </div>
+            </section>
         </section>
     </main>
     <footer>
