cambio de colores

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
 :root {
-    --primary-color: #1b3242;
+    --primary-color: #845924;
     --secondary-color: #B4B8AB;
     --light-color: #ffffff;
     --dark-color: #333;
     --text-color: #ffffff;
     --text-color-2: #c4c4c4;
-    --text-color-3: #0a95e6;
+    --text-color-3: #543816;
     --text-color-4: #bb9d1a;
-    --background-color: #3a3a3a;
+    --background-color: #906c17;
     --background-color-2: #d8d8d8;
     --background-color-3: #8a7f7f;
-    --background-color-4: #70b2d1;
+    --background-color-4: #f7c56d;
     --line-height-1: 1.6;
     --line-height-2: 1.8;
     --line-height-3: 2.4;
